<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_viewModel"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/view_model"/>
        <item
                android:id="@+id/nav_viewModelDataBinding"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/view_model_data_binding"/>
        <item
                android:id="@+id/nav_livedata"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/live_data"/>
        <item
                android:id="@+id/nav_livedatawithbind"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/live_data_with_bind"/>
    </group>
</menu>